--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,9 @@ certifi==2018.8.24
 chardet==3.0.4
 Click==7.0
 colorama==0.3.9
+coverage==4.5.1
+coveralls==1.5.1
+docopt==0.6.2
 Flask==1.0.2
 idna==2.7
 isort==4.3.4
@@ -19,6 +22,7 @@ psycopg2==2.7.5
 py==1.7.0
 pylint==2.1.1
 pytest==3.9.1
+pytest-cov==2.6.0
 requests==2.20.0
 six==1.11.0
 urllib3==1.23
