--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ python:
   - "3.6"
 install:
   - pip install coverage
-  - pip install requirements.txt
+  - pip install -r requirements.txt
 script:
   - coverage run -m pytest
   - coverage report
