--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,6 @@ install:
   - pip install coverage
   - pip install -r requirements.txt
 script:
-  - coverage run -m pytest
+  - coverage run --omit */home/travis/virtualenv/* -m pytest
   - coverage report
   - coveralls
